--- a/application/layouts/scripts/layout_admin_local.phtml
+++ b/application/layouts/scripts/layout_admin_local.phtml
@@ -11,8 +11,11 @@
         <link rel="icon" type="image/png" href=<?= $this->baseUrl("dist/img/") ?> />
         <!--Caminho da public "$this->baseUrl()-->
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/bootstrap.css") ?> />
-                <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css") ?> />
+        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/categoriaPassageiro.css") ?> />
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" />
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css" />
+
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top:0; right:0; left:0; z-index:1030;">
@@ -31,22 +34,22 @@
                             <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="<?= $this->baseUrl("/parada-onibus") ?>">
+                        <a class="nav-link" href="<?= $this->baseUrl("parada-onibus") ?>">
                             Paradas
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="<?= $this->baseUrl("/tarifas") ?>">
+                        <a class="nav-link" href="<?= $this->baseUrl("categoria-onibus") ?>">
                             Tarifas
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="<?= $this->baseUrl("/concessaotrajeto") ?>">
-                            Trajeto
+                        <a class="nav-link" href="<?= $this->baseUrl("concessaotrajeto") ?>">
+                            Trajetos
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="<?= $this->baseUrl("/concessaotrajeto") ?>">
+                        <a class="nav-link" href="<?= $this->baseUrl("concessaotrajeto") ?>">
                             Concessões
                         </a>
                     </li>
@@ -62,6 +65,7 @@
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootbox.min.js') ?>"></script>
+                <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
         <?= $this->headScript(); ?>
     </body>
 </html>
