--- a/application/views/scripts/onibus-urbano/index.phtml
+++ b/application/views/scripts/onibus-urbano/index.phtml
@@ -1,3 +1,5 @@
+<img src="<?= $this->baseUrl("dist/img/loading.gif") ?>" class="img-loading hidden" alt="carregando...">
+
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
@@ -18,60 +20,108 @@
                                             Cadastro realizado com sucesso!
                                         </div>-->
                         <div class="row">
-                            <div class="col">
-                                <label>Placa</label>
-                                <input type="text" class="form-control" name="placa" id="placa">
+                            <div class="col-lg-6">
+                                <label>Placa <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="placa" id="placa" title="Placa do veículo">
+                                <div class="alert alert-danger placa" role="alert" style="display:none;">
+                                    O campo <strong>Placa</strong> é obrigatório.
+                                </div>
+                                <div class="alert alert-danger placa_tamanho" role="alert" style="display:none;">
+                                    O campo <strong>Placa</strong> deve conter 7 dígitos.
+                                </div>
                             </div>
-                            <div class="col">
-                                <label>Ano</label>
-                                <input type="text" class="form-control" name="ano" id="ano">
-                            </div>
-                            <div class="col">
-                                <label>Situação</label>
-                                <input type="text" class="form-control" name="situacao" id="situacao">
-                            </div>
-                            <div class="col">
-                                <label>Nº Assentos</label>
-                                <input type="text" class="form-control" name="numero_assentos" id="numero_assentos">
-                            </div>
-                            <div class="col">
-                                <label>Nº Passageiros</label>
-                                <input type="text" class="form-control" name="numero_passageiros" id="numero_passageiros">
-                            </div>
-                        </div>
-                        <br>
-                        <div class="row">
-                            <div class="col">
-                                <label>Chassi</label>
-                                <input type="text" class="form-control" name="chassi" id="chassi">
-                            </div>
-                            <div class="col">
-                                <label>Km</label>
-                                <input type="text" class="form-control" name="km" id="km">
-                            </div>
-                            <div class="col">
-                                <label>Renavam</label>
-                                <input type="text" class="form-control" name="renavam" id="renavam">
+                            <div class="col-lg-6">
+                                <label>Ano <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="ano" id="ano" title="Ano de fabricação do veículo">
+                                <div class="alert alert-danger ano" role="alert" style="display:none;">
+                                    O campo <strong>Ano</strong> é obrigatório.
+                                </div>
+                                <div class="alert alert-danger ano_tamanho" role="alert" style="display:none;">
+                                    O campo <strong>Ano</strong> deve conter 4 dígitos.
+                                </div>
                             </div>
                         </div>
-                        <br>
                         <div class="row">
-                            <div class="col">
-                                <label>Cor</label>
-                                <input type="text" class="form-control" name="cor" id="cor">
+                            <div class="col-lg-6">
+                                <label>Capacidade máxima <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="numero_passageiros" id="numero_passageiros" title="Capacidade máxima de passageiros">
+                                <div class="alert alert-danger numero_passageiros" role="alert" style="display:none;">
+                                    O campo <strong>Capacidade máxima</strong> é obrigatório.
+                                </div>
+                                <div class="alert alert-danger numero_passageiros_maximo" role="alert" style="display:none;">
+                                    A capacidade não pode ser menor que o nº de assentos.
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <label>Número de Assentos <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="numero_assentos" id="numero_assentos" title="Quantidade de assentos no veículo">
+                                <div class="alert alert-danger numero_assentos" role="alert" style="display:none;">
+                                    O campo <strong>Número de Assentos</strong> é obrigatório.
+                                </div>
+                                <div class="alert alert-danger numero_assentos_maximo" role="alert" style="display:none;">
+                                    A nº de assentos não pode ser maior que a capacidade.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <label>Chassi <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="chassi" id="chassi" title="Chassi do veículo">
+                                <div class="alert alert-danger chassi" role="alert" style="display:none;">
+                                    O campo <strong>Chassi</strong> é obrigatório.
+                                </div>
+                                <div class="alert alert-danger chassi_tamanho" role="alert" style="display:none;">
+                                    O campo <strong>Chassi</strong> deve conter 17 dígitos.
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <label>Quilometragem <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="km" id="km" title="Quilometragem do veículo">
+                                <div class="alert alert-danger km" role="alert" style="display:none;">
+                                    O campo <strong>Quilometragem</strong> é obrigatório.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <label>Renavam <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="renavam" id="renavam" title="Renavam do veículo">
+                                <div class="alert alert-danger renavam" role="alert" style="display:none;">
+                                    O campo <strong>Renavam</strong> é obrigatório.
+                                </div>
+                                <div class="alert alert-danger renavam_tamanho" role="alert" style="display:none;">
+                                    O campo <strong>Renavam</strong> deve conter 11 dígitos.
+                                </div>
                             </div>
 
-                            <div class="col">
-                                <label>Marca</label>
-                                <input type="text" class="form-control" name="marca" id="marca">
+                            <div class="col-lg-6">
+                                <label>Cor <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="cor" id="cor" title="Cor do veículo">
+                                <div class="alert alert-danger cor" role="alert" style="display:none;">
+                                    O campo <strong>Cor</strong> é obrigatório.
+                                </div>
                             </div>
-                            <div class="col">
-                                <label>Modelo</label>
-                                <input type="text" class="form-control" name="modelo" id="modelo">
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <label>Marca <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="marca" id="marca" title="Fabricante/Marca do veículo">
+                                <div class="alert alert-danger marca" role="alert" style="display:none;">
+                                    O campo <strong>Marca</strong> é obrigatório.
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <label>Modelo <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="modelo" id="modelo" title="Modelo do veículo">
+                                <div class="alert alert-danger modelo" role="alert" style="display:none;">
+                                    O campo <strong>Modelo</strong> é obrigatório.
+                                </div>
                             </div>
                         </div>
                         <hr>
-                        <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
+                        <button type="button" class="btn btn-primary btn-block cadastrar-onibus-urbano" data-loading-text="Cadastrando...">
+                            Cadastrar
+                        </button>
                     </form>
                 </div>
             </div>
