--- a/application/views/scripts/onibus-urbano/index.phtml
+++ b/application/views/scripts/onibus-urbano/index.phtml
@@ -12,7 +12,7 @@
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-header">
-                    <button class="btn btn-primary clickable card-collapsed">Cadastrar</button>
+                    <button class="btn btn-info clickable card-collapsed">Cadastrar</button>
                 </div>
                 <div class="card-body" style="display: none;">
                     <form class="jumbotron" method="post" enctype="multipart/form-data">
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <hr>
-                        <button type="button" class="btn btn-primary btn-block cadastrar-onibus-urbano" data-loading-text="Cadastrando...">
+                        <button type="button" class="btn btn-info btn-block cadastrar-onibus-urbano" data-loading-text="Cadastrando...">
                             Cadastrar
                         </button>
                     </form>
@@ -146,7 +146,7 @@
                             <td> <?= $onibus['numero_passageiros'] ?></td>
                             <td> <?= $onibus['numero_assentos'] ?></td>
                             <td class="text-center">
-                                <a class="btn btn-info btn-labeled" href="<?= $this->baseUrl('/onibus-urbano/editar/id/' . $onibus['id_onibus_urbano']) ?>" >
+                                <a class="btn btn-primary btn-labeled" href="<?= $this->baseUrl('/onibus-urbano/editar/id/' . $onibus['id_onibus_urbano']) ?>" >
                                     <span class="btn-label">
                                         <i class="fas fa-eye"></i>
                                     </span>
