estilizando no gás

--- a/application/layouts/scripts/layout_secretario.phtml
+++ b/application/layouts/scripts/layout_secretario.phtml
@@ -7,7 +7,7 @@
         <script type="text/javascript">
             var baseUrl = '<?= $this->baseUrl('/') ?>';
         </script>
-        <link rel="icon" type="image/png" href=<?= $this->baseUrl("dist/img/") ?> />
+        <link rel="icon" type="image/png" href=<?= $this->baseUrl("dist/img/bus.png") ?> />
         <!--Caminho da public "$this->baseUrl()-->
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/bootstrap-cerulean.css") ?> />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -32,12 +32,12 @@
                             <li class="nav-item">
                                 <a class="nav-link" title="(Alt+n) Visualizar Ônibus Urbanos" href="<?= $this->baseUrl("onibus-urbano") ?>">
                                     <i class="fas fa-bus-alt"></i>
-                                    Ô<u>n</u>ibus Urbanos</a>
+                                    Ônibus <u>U</u>rbanos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" title="(Alt+i) Visualizar Ônibus Intermunicipais" href="<?= $this->baseUrl("onibus-intermunicipal") ?>">
                                     <i class="fas fa-bus"></i>
-                                    Ôn<u>i</u>bus Intermunicipais</a>
+                                    Ônibus <u>I</u>ntermunicipais</a>
                             </li>
                         </ul>
 
