--- a/application/views/scripts/onibus-urbano/index.phtml
+++ b/application/views/scripts/onibus-urbano/index.phtml
@@ -128,7 +128,7 @@
         </div>
 
         <div class="col-lg-12" style="margin-top: 2%">
-            <table class="table table-hover table-bordered dataTable">
+            <table class="table table-bordered dataTable">
                 <thead>
                     <tr>
                         <th>Placa</th>
