--- a/application/views/scripts/onibus-intermunicipal/index.phtml
+++ b/application/views/scripts/onibus-intermunicipal/index.phtml
@@ -1,102 +1,168 @@
+<img src="<?= $this->baseUrl("dist/img/loading.gif") ?>" class="img-loading hidden" alt="carregando...">
+
 <div class="container">
     <div class="row">
-        <div class="col-lg-12">
-            <ol class="breadcrumb">
+        <div class="col-lg-12" style="padding: 0px;">
+            <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.5);">
                 <li class="breadcrumb-item"><a href="<?= $this->baseUrl("secretario") ?>">Início</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Ônibus Intermunicipais</li>
+                <li class="breadcrumb-item active" style="color: white;" aria-current="page">Ônibus Intermunicipais</li>
             </ol>
         </div>
 
-        <div class="col-lg-12">
-            <div class="card">
+        <div class="col-lg-12" style="padding: 0px;">
+            <div class="card" style="background-color:rgba(0,0,0,0.5);">
                 <div class="card-header">
-                    <button class="btn btn-primary clickable card-collapsed">Cadastrar</button>
+                    <button class="btn btn-info clickable card-collapsed">Cadastrar</button>
                 </div>
                 <div class="card-body" style="display: none;">
-                    <form class="jumbotron" method="post" enctype="multipart/form-data">
+                    <form class="jumbotron" method="post" enctype="multipart/form-data" style="background-color:rgba(0,0,0,0.2); color: white;">
                         <!--                <div class="alert alert-success" role="alert">
                                             Cadastro realizado com sucesso!
                                         </div>-->
-                        <div class="form-group">
-                            <label for="exampleFormControlSelect1">Categoria</label>
-                            <select class="form-control" name="id_categoria_onibus" id="id_categoria_onibus">
-                                <option value="1">Comum</option>
-                                <option value="2">Leito</option>
-                                <option value="3">Executivo</option>
-                            </select>
-                        </div>
                         <div class="row">
                             <div class="col">
-                                <label>Placa</label>
+                                <div class="form-group">
+                                    <label for="exampleFormControlSelect1">Categoria</label>
+                                    <select class="form-control" name="id_categoria_onibus" id="id_categoria_onibus">
+                                        <option value="1">Comum</option>
+                                        <option value="2">Leito</option>
+                                        <option value="3">Executivo</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <label>Placa <strong title="Campo Obrigatório">*</strong></label>
                                 <input type="text" class="form-control" name="placa" id="placa">
-                            </div>
-                            <div class="col">
-                                <label>Ano</label>
-                                <input type="text" class="form-control" name="ano" id="ano">
-                            </div>
-                            <div class="col">
-                                <label>Km</label>
-                                <input type="text" class="form-control" name="km" id="km">
-                            </div>
-                            <div class="col">
-                                <label>Nº Assentos</label>
-                                <input type="text" class="form-control" name="numero_assentos" id="numero_assentos">
-                            </div>
-                            <div class="col">
-                                <label>Nº Passageiros</label>
-                                <input type="text" class="form-control" name="numero_passageiros" id="numero_passageiros">
+                                <div class="alert alert-danger placa" role="alert" style="display:none;">
+                                    O campo <strong>Placa</strong> é obrigatório.
+                                </div>
+                                <div class="alert alert-danger placa_tamanho" role="alert" style="display:none;">
+                                    O campo <strong>Placa</strong> deve conter 7 dígitos.
+                                </div>
                             </div>
                         </div>
-                        <br>
                         <div class="row">
                             <div class="col">
-                                <label>Chassi</label>
+                                <label>Chassi <strong title="Campo Obrigatório">*</strong></label>
                                 <input type="text" class="form-control" name="chassi" id="chassi">
+                                <div class="alert alert-danger chassi" role="alert" style="display:none;">
+                                    O campo <strong>Chassi</strong> é obrigatório.
+                                </div>
+                                <div class="alert alert-danger chassi_tamanho" role="alert" style="display:none;">
+                                    O campo <strong>Chassi</strong> deve conter 17 dígitos.
+                                </div>
                             </div>
                             <div class="col">
-                                <label>Marca</label>
-                                <input type="text" class="form-control" name="marca" id="marca">
-                            </div>
-                            <div class="col">
-                                <label>Modelo</label>
-                                <input type="text" class="form-control" name="modelo" id="modelo">
-                            </div>
-                            <div class="col">
-                                <label>Nº Andares</label>
-                                <input type="text" class="form-control" name="andares" id="andares">
+                                <label>Ano <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="ano" id="ano">
+                                <div class="alert alert-danger ano" role="alert" style="display:none;">
+                                    O campo <strong>Ano</strong> é obrigatório.
+                                </div>
+                                <div class="alert alert-danger ano_tamanho" role="alert" style="display:none;">
+                                    O campo <strong>Ano</strong> deve conter 4 dígitos.
+                                </div>
                             </div>
                         </div>
-                        <br>
                         <div class="row">
                             <div class="col">
-                                <label>Ar-cond.</label>
-                                <input type="text" class="form-control" name="arcondicionado" id="arcondicionado">
+                                <label>Nº Assentos <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="numero_assentos" id="numero_assentos">
+                                <div class="alert alert-danger numero_assentos" role="alert" style="display:none;">
+                                    O campo <strong>Número de Assentos</strong> é obrigatório.
+                                </div>
+                                <div class="alert alert-danger numero_assentos_maximo" role="alert" style="display:none;">
+                                    A nº de assentos não pode ser maior que a capacidade.
+                                </div>
                             </div>
                             <div class="col">
-                                <label>Cor</label>
-                                <input type="text" class="form-control" name="cor" id="cor">
+                                <label>Capacidade máxima <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="numero_passageiros" id="numero_passageiros">
+                                <div class="alert alert-danger numero_passageiros" role="alert" style="display:none;">
+                                    O campo <strong>Capacidade máxima</strong> é obrigatório.
+                                </div>
+                                <div class="alert alert-danger numero_passageiros_maximo" role="alert" style="display:none;">
+                                    A capacidade não pode ser menor que o nº de assentos.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <label>Quilometragem <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="km" id="km">
+                                <div class="alert alert-danger km" role="alert" style="display:none;">
+                                    O campo <strong>Quilometragem</strong> é obrigatório.
+                                </div>
                             </div>
                             <div class="col">
-                                <label>Renavam</label>
-                                <input type="text" class="form-control" name="renavam" id="renavam">
-                            </div>
-                            <div class="col">
-                                <label>Banheiro</label>
+                                <label>Banheiro(s) <strong title="Campo Obrigatório">*</strong></label>
                                 <input type="text" class="form-control" name="banheiro" id="banheiro">
+                                <div class="alert alert-danger banheiro" role="alert" style="display:none;">
+                                    O campo <strong>Banheiro(s)</strong> é obrigatório.
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <label>Marca <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="marca" id="marca">
+                                <div class="alert alert-danger marca" role="alert" style="display:none;">
+                                    O campo <strong>Marca</strong> é obrigatório.
+                                </div>
                             </div>
                             <div class="col">
-                                <label>Situação</label>
-                                <input type="text" class="form-control" name="situacao" id="situacao">
+                                <label>Modelo <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="modelo" id="modelo">
+                                <div class="alert alert-danger modelo" role="alert" style="display:none;">
+                                    O campo <strong>Modelo</strong> é obrigatório.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <label>Número de Andares <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="andares" id="andares">
+                                <div class="alert alert-danger andares" role="alert" style="display:none;">
+                                    O campo <strong>Número de Andares</strong> é obrigatório.
+                                </div>
+                            </div>
+                            <div class="col">
+                                <label>Ar-condicionado <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="arcondicionado" id="arcondicionado">
+                                <div class="alert alert-danger arcondicionado" role="alert" style="display:none;">
+                                    O campo <strong>Ar-condicionado</strong> é obrigatório.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <label>Cor <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="cor" id="cor">
+                                <div class="alert alert-danger cor" role="alert" style="display:none;">
+                                    O campo <strong>Cor</strong> é obrigatório.
+                                </div>
+                            </div>
+                            <div class="col">
+                                <label>Renavam <strong title="Campo Obrigatório">*</strong></label>
+                                <input type="text" class="form-control" name="renavam" id="renavam">
+                                <div class="alert alert-danger renavam" role="alert" style="display:none;">
+                                    O campo <strong>Renavam</strong> é obrigatório.
+                                </div>
+                                <div class="alert alert-danger renavam_tamanho" role="alert" style="display:none;">
+                                    O campo <strong>Renavam</strong> deve conter 11 dígitos.
+                                </div>
                             </div>
                         </div>
                         <hr>
-                        <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
+                        <button type="button" class="btn btn-info btn-block cadastrar-onibus-intermunicipal">
+                            Cadastrar
+                        </button>
                     </form>
                 </div>
             </div>
         </div>
         <div class="col-lg-12">
-            <table class="table table-hover table-bordered dataTable" style="margin-top: 2%">
+            <table class="table" style="margin-top: 2%; background-color:rgba(0,0,0,0.5); padding: 0px;">
                 <thead>
                     <tr>
                         <th scope="col">Placa</th>
@@ -108,13 +174,14 @@
                 </thead>
                 <tbody>
                     <? foreach ($this->listarTodosOnibusIntermunicipais as $onibus): ?>
+
                         <tr>
                             <td> <?= $onibus['placa'] ?></td>
                             <td> <?= $onibus['chassi'] ?></td>
                             <td> <?= $onibus['numero_passageiros'] ?></td>
                             <td> <?= $onibus['numero_assentos'] ?></td>
                             <td class="text-center">
-                                <a class="btn btn-info btn-labeled" href="<?= $this->baseUrl('onibus-intermunicipal/editar/id/' . $onibus['id_onibus_viagem']) ?>" >
+                                <a class="btn btn-primary btn-labeled" href="<?= $this->baseUrl('onibus-intermunicipal/editar/id/' . $onibus['id_onibus_viagem']) ?>" >
                                     <span class="btn-label">
                                         <i class="fas fa-eye"></i>
                                     </span>
